--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    -->
+    <link rel="manifest" href="/manifest.json" />
+    <title>Test app/title>
+  </head>
   <body>
-    <select>
-      <option>Option 1</option>
-      <option>Option 2</option>
-      <option>Option 3</option>
-    </select>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
 </html>
