--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <title>Test app/title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <select>
+      <option>Test 1</option>
+      <option>Test 2</option>
+      <option>Test 3</option>
+      <option>Test 4</option>
+    </select>
   </body>
 </html>
