--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Test app/title>
+    <title>Test app</title>
   </head>
   <body>
     <select>
