--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         el.innerHTML = `<option>Test 5/option>`;
       }
     </script>
-    <select id="sel">
+    <select id="sel" onmousedown="onMouseDown(event);">
       <option>Test 1</option>
       <option>Test 2</option>
       <option>Test 3</option>
