--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script>
       function onMouseDown(e) {
         let el = document.getElementById('sel');
-        el.innerHTML = `<option>Test 5/option>`;
+        el.innerHTML = `<option>Test 5</option>`;
       }
     </script>
     <select id="sel" onmousedown="onMouseDown(event);">
