--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
     <title>Test app</title>
   </head>
   <body>
-    <script>
-      function onMouseDown(e) {
-        let el = document.getElementById('sel');
-        el.innerHTML = `<option>Test 5</option>`;
-      }
-    </script>
-    <select id="sel" onmousedown="onMouseDown(event);">
+    <select>
       <option>Test 1</option>
       <option>Test 2</option>
       <option>Test 3</option>
