--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <title>Test app</title>
   </head>
   <body>
-    <select>
-      <option>Test 1</option>
-      <option>Test 2</option>
-      <option>Test 3</option>
-      <option>Test 4</option>
+    <select list="states">
+      <datalist id="states">
+        <option>Test 1</option>
+        <option>Test 2</option>
+        <option>Test 3</option>
+        <option>Test 4</option>
+      </datalist>
     </select>
   </body>
 </html>
