--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
     <title>Test app</title>
   </head>
   <body>
-    <select list="states">
-      <datalist id="states">
-        <option>Test 1</option>
-        <option>Test 2</option>
-        <option>Test 3</option>
-        <option>Test 4</option>
-      </datalist>
-    </select>
+    <input list="states" />
+    <datalist id="states">
+      <option>Test 1</option>
+      <option>Test 2</option>
+      <option>Test 3</option>
+      <option>Test 4</option>
+    </datalist>
   </body>
 </html>
